# iudex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
configs/: decoder_only_sexp_gum.jsonnet  decoder_only_sexp_rstdt.jsonnet  decoder_only_sr_gum.jsonnet  decoder_only_sr_rstdt.jsonnet  dmrst.jsonnet  dmrst_gum.jsonnet  dmrst_rstdt.jsonnet  piudotto_gum.jsonnet  piudotto_rstdt.jsonnet  seq2seq_sexp_gum.jsonnet  seq2seq_sexp_rstdt.jsonnet  seq2seq_sr_gum.jsonnet  seq2seq_sr_rstdt.jsonnet  sr_biaffine_gum.jsonnet  sr_biaffine_rstdt.jsonnet  topdown_biaffine.jsonnet  topdown_biaffine_gum.jsonnet  topdown_biaffine_rstdt.jsonnet
configs/lib/: relations_gum9.libsonnet  relations_rstdt.libsonnet  rstdt_carve.json  rstdt_coarse_map.libsonnet
configs/prod_local/: huwan_t5base_sexp.jsonnet  widthband_s2s_sr_rstdt.jsonnet
configs/repro/: dmrst_rstdt.jsonnet
docs/: gum-baseline-experiments.md
iudex/: __init__.py  __main__.py  runs.py
iudex/common/: log.py  training.py
iudex/rst/: __init__.py  runs.py  training.py
iudex/rst/data/: metrics.py  reader.py  seg_metrics.py  tree.py
iudex/rst/parsers/: __init__.py
iudex/rst/parsers/common/: README.md  biaffine.py  config.py  curriculum.py  detokenization.py  encoding.py  generative_eval.py  inference.py  pointer.py  predict_cli.py  segmentation.py  seqgen.py  sexp_constraints.py
iudex/rst/parsers/decoder_only_sexp/: README.md  __init__.py  configuration_decoder_only_sexp.py  modeling_decoder_only_sexp.py  predict_decoder_only_sexp.py  train_decoder_only_sexp.py
iudex/rst/parsers/decoder_only_sr/: README.md  __init__.py  configuration_decoder_only_sr.py  modeling_decoder_only_sr.py  predict_decoder_only_sr.py  train_decoder_only_sr.py
iudex/rst/parsers/dmrst/: README.md  __init__.py  configuration_dmrst.py  evaluation.py  modeling_dmrst.py  predict_dmrst.py  train_dmrst.py
iudex/rst/parsers/hfhub/: __init__.py  datasets.py  hub.py  push.py
iudex/rst/parsers/piudotto/: README.md  __init__.py  configuration_piudotto.py  modeling_piudotto.py  predict_piudotto.py  train_piudotto.py
iudex/rst/parsers/seq2seq_sexp/: README.md  __init__.py  configuration_seq2seq_sexp.py  modeling_seq2seq_sexp.py  predict_seq2seq_sexp.py  train_seq2seq_sexp.py
iudex/rst/parsers/seq2seq_sr/: README.md  __init__.py  configuration_seq2seq_sr.py  constraints.py  modeling_seq2seq_sr.py  predict_seq2seq_sr.py  train_seq2seq_sr.py
iudex/rst/parsers/sr_biaffine/: README.md  __init__.py  configuration_sr_biaffine.py  modeling_sr_biaffine.py  predict_sr_biaffine.py  train_sr_biaffine.py
iudex/rst/parsers/topdown_biaffine/: README.md  __init__.py  configuration_topdown_biaffine.py  modeling_topdown_biaffine.py  predict_topdown_biaffine.py  train_topdown_biaffine.py
scripts/: cascade_probe.py  check_rstdt_carve.py  compare_runs.py  eval_small_gum.py
scripts/icl/: _common.py  icl_pilot.py
tests/: test_beam_nan_poisoning.py  test_constraints.py  test_decoder_only_sexp.py  test_decoder_only_sr.py  test_edu_token_alignment.py  test_gold_edu_forcer_cc_false.py  test_gold_edu_semantics_parity.py  test_seq2seq_embedding_carve.py  test_seq2seq_sexp.py  test_seq2seq_sr_gold_edu.py  test_seqgen_checkpoint_and_batch.py  test_sexp_constraints.py  test_sexp_empty_tree_fallback.py  test_sexp_roundtrip.py  test_shift_reduce_roundtrip.py  test_sr_biaffine.py  test_sr_decode_state.py  test_sr_deep_tree_degrades.py
