[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "iudex"
version = "0.1.0"
description = "A collection of discourse parsers focused on readability and usability."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "tonga-config",
    "lxml",
    "rich",
]

[tool.setuptools.packages.find]
include = ["iudex*"]
