[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iudex"
version = "0.1.0"
description = "A collection of discourse parsers focused on readability and usability."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "huggingface_hub",
    "tonga-config",
    "lxml",
    "rich",
]

[project.scripts]
iudex = "iudex.__main__:main"

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["iudex*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["data", "checkpoints"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line too long — formatter handles long lines; rare leftovers (URLs, strings) are OK
    "B008",  # function calls in default arguments — fine for our config dataclasses
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
