[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larc-iudex"
version = "0.1.0a1"
description = "A collection of discourse parsers and associated code focused on readability and usability."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Luke Gessler", email = "lukegessler@gmail.com"}]
keywords = [
    "discourse parsing",
    "rhetorical structure theory",
    "RST",
    "NLP",
    "computational linguistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch",
    "transformers",
    "huggingface_hub",
    "tonga-config",
    "lxml",
    "rich",
    "sentencepiece",
]

[project.urls]
Homepage = "https://github.com/larc-iu/iudex"
Repository = "https://github.com/larc-iu/iudex"
Issues = "https://github.com/larc-iu/iudex/issues"

[project.scripts]
iudex = "iudex.__main__:main"

[project.optional-dependencies]
dev = ["ruff", "build", "twine"]

[tool.setuptools.packages.find]
include = ["iudex*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["data", "checkpoints"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line too long — formatter handles long lines; rare leftovers (URLs, strings) are OK
    "B008",  # function calls in default arguments — fine for our config dataclasses
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
